--- a/portfolio.html
+++ b/portfolio.html
@@ -26,29 +26,31 @@
 
       <div class="work">
         <img src="assets/images/cafe.jpg.jpg" alt="Word Guess">
-        
         <h3>Word Guess</h3>
       </div>
+
       <div class="work">
         <img src="assets/images/orange.jpg.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
+        <a href=" https://dreena87.github.io/mario_game/" target="_blank">
+        <h3>RPG Game</h3></a>
       </div>
+
       <div class="work">
         <img src="assets/images/light.jpg.jpg" alt="Trivia Game">
-
         <h3>Trivia Game</h3>
       </div>
+
       <div class="work">
         <img src="assets/images/ears.jpg.jpg" alt="Rutgers Info Widget">
-
         <h3>Rutgers Info Widget</h3>
       </div>
-      <div class="work">
-        <img src="assets/images/sonic.jpg.jpg" alt="Rock Paper Scissors">
 
-        <h3>Rock Paper Scissors</h3>
-      </div>
+      <div class="work">
+          <img src="assets/images/ears.jpg.jpg" alt="Rutgers Info Widget">
+          <h3>Rutgers Info Widget</h3>
+        </div>
+     
+  
 
     </section>
 
