--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
       <img src="assets/images/my-image.jpg.jpg" class="auth-image" alt="Your Name">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+      <p>My name is Adreena Howard and I am a Full stack Web Developer.  I have experience with web development tech like JavaScript, CSS, HTML, and Node.js. and C++.  </p>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+      <p>I’m a musician who has been playing the saxophone for over 15 years.  I understand the discipline and practice it takes to master anything you are working towards.  I am an excellent communicator and work well in teams or individually.</p>
 
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>I am confident in my ability to learn and grow as a developer.  I am a quick learner who loves to learn new coding languages.  Ultimately my goal is to work for a company that helps my growth toward becoming a senior web developer.</p>
 
     </section>
 
