--- a/portfolio.html
+++ b/portfolio.html
@@ -26,28 +26,32 @@
 
       <div class="work">
         <img src="assets/images/cafe.jpg.jpg" alt="Word Guess">
-        <h3>Word Guess</h3>
+        <a href=" https://dreena87.github.io/Gify_project/" target="_blank">
+        <h3>Word Guess</h3></a>
       </div>
 
       <div class="work">
         <img src="assets/images/orange.jpg.jpg" alt="RPG Game">
         <a href=" https://dreena87.github.io/mario_game/" target="_blank">
-        <h3>RPG Game</h3></a>
+        <h3>Giffy Project</h3></a>
       </div>
 
       <div class="work">
         <img src="assets/images/light.jpg.jpg" alt="Trivia Game">
-        <h3>Trivia Game</h3>
+        <a href="https://dreena87.github.io/Trivagame/" target="_blank">
+        <h3>Trivia Game</h3></a>
       </div>
 
       <div class="work">
         <img src="assets/images/ears.jpg.jpg" alt="Rutgers Info Widget">
-        <h3>Rutgers Info Widget</h3>
+        <a href="https://dreena87.github.io/Psychic-game/" target="_blank">
+        <h3>Psychic Game</h3></a>
       </div>
 
       <div class="work">
           <img src="assets/images/ears.jpg.jpg" alt="Rutgers Info Widget">
-          <h3>Rutgers Info Widget</h3>
+          <a href="https://dreena87.github.io/boredHub/" target="_blank">
+          <h3>Bored Hub</h3></a>
         </div>
      
   
