--- a/portfolio.html
+++ b/portfolio.html
@@ -27,13 +27,13 @@
       <div class="work">
         <img src="assets/images/cafe.jpg.jpg" alt="Word Guess">
         <a href=" https://dreena87.github.io/Gify_project/" target="_blank">
-        <h3>Word Guess</h3></a>
+        <h3>Giffy Project</h3></a>
       </div>
 
       <div class="work">
         <img src="assets/images/orange.jpg.jpg" alt="RPG Game">
         <a href=" https://dreena87.github.io/mario_game/" target="_blank">
-        <h3>Giffy Project</h3></a>
+        <h3>RPG Game</h3></a>
       </div>
 
       <div class="work">
