--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="work">
-          <img src="assets/images/ears.jpg.jpg" alt="Rutgers Info Widget">
+          <img src="assets/images/download.jpg" alt="Rutgers Info Widget">
           <a href="https://dreena87.github.io/boredHub/" target="_blank">
           <h3>Bored Hub</h3></a>
         </div>
