--- a/portfolio.html
+++ b/portfolio.html
@@ -38,14 +38,14 @@
 
       <div class="work">
         <img src="assets/images/light.jpg.jpg" alt="Trivia Game">
-        <a href="https://dreena87.github.io/Trivagame/" target="_blank">
-        <h3>Trivia Game</h3></a>
+        <a href="https://scrape-ads.herokuapp.com/" target="_blank">
+        <h3>Scrape App</h3></a>
       </div>
 
       <div class="work">
         <img src="assets/images/ears.jpg.jpg" alt="Rutgers Info Widget">
-        <a href="https://dreena87.github.io/Psychic-game/" target="_blank">
-        <h3>Psychic Game</h3></a>
+        <a href="https://click-game87.herokuapp.com/" target="_blank">
+        <h3>Clicky-Game</h3></a>
       </div>
 
       <div class="work">
