--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
       <img src="assets/images/my-image.jpg.jpg" class="auth-image" alt="Your Name">
 
-      <p>My name is Adreena Howard and I am a Full stack Web Developer.  I have experience with web development tech like JavaScript, CSS, HTML, and Node.js. and C++.  </p>
+      <p>My name is Adreena Howard and I am a Full stack Web Developer.  I have experience with web development tech like JavaScript, CSS, HTML, Node.js, and React.js.  </p>
 
-      <p>I’m a musician who has been playing the saxophone for over 15 years.  I understand the discipline and practice it takes to master anything you are working towards.  I am an excellent communicator and work well in teams or individually.</p>
+      <p>I’m a full stack Software Developer.  I understand the discipline and practice it takes to master anything you are working towards.  I am an excellent communicator and work well in teams or individually.</p>
 
       <p>I am confident in my ability to learn and grow as a developer.  I am a quick learner who loves to learn new coding languages.  Ultimately my goal is to work for a company that helps my growth toward becoming a senior web developer.</p>
 
